--- a/css/hub.css
+++ b/css/hub.css
@@ -19,6 +19,30 @@ h1 {
 
 }
 
+h5 {
+    font-family: 'Fredoka', sans-serif;
+    color: #364958;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    padding-top: 05x;
+    margin-top: 0px;
+    font-size: 30px;
+    
+
+}
+h6 {
+    font-family: 'Fredoka', sans-serif;
+    color: #364958;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    padding-top: 05x;
+    margin-top: 0px;
+    font-size: 25px;
+    
+
+}
+
+
 .titletext {
     margin-top: 5px;
     text-align: left;
@@ -209,6 +233,60 @@ h3 {
     position: absolute !important; 
 }
 
+
 .svg-icon-check-todo{
     margin: 5px;
+} 
+
+.dayviewbg {
+    margin-top: 25px;
+    background-color: #364958BA;
+    border-radius: 8px;
+    width: 450px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;  
+    color: white;
+    padding: 20px;
+    overflow: auto;
+    resize: both;
+    min-width: 450px;
+    max-height: 95%;
+    margin-left: 25px;
+    align-items: flex-start;
+    min-height: 200px;
+}
+
+.dayviewobjectitle {
+    font-family: 'Fredoka', sans-serif;
+    color: #364958;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    padding-top: 05x;
+    margin-top: 0px;
+    font-size: 64px;
+    padding-left: 0px;
+    margin-right: 50px;
+    position: absolute !important; 
+}
+
+.dayviewmodule {
+    margin-top: 50px;
+    background-color: #3649585E;
+    border-radius: 8px;
+    color: white;
+    margin-left: 25px;
+    padding-bottom: 50px;
+    overflow: auto;
+    width: 95%;
+    height: 95%;
+    margin-right: 25px;
+    overflow: auto;
+    padding: 20px;
+    margin: 25px;
+    align-self: center !important;
+
+ 
 }
