--- a/css/hub.css
+++ b/css/hub.css
@@ -1,11 +1,28 @@
-body {
-    background-color: #D9D9D9;
-    font-family: 'Fredoka';
-    height: 100vh;
-    margin: 0;
-    align-items: flex-start;
-    display: flex;
+:root{
+    --widgit-bg: #364958BA;
+    --widgitBG2: #3649585E;
+    --buttons: #364958;
+    --placeholder: #D9D9D9;
+    --LMIcons: #ffffff;
 }
+
+body {
+  /*  background-color: #D9D9D9; */
+    font-family: 'Fredoka';
+    min-height: 100vh;
+    margin: 0;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    display: flex;
+    background-image: url("../Backgrounds/PaintStrokes/PS_1.jpg");
+    background-size: cover;
+
+    
+}
+
+
+
 
 h1 {
     font-family: 'Fredoka', sans-serif;
@@ -63,14 +80,14 @@ h3 {
 
 .todo {
         margin-top: 25px;
-        background-color: #364958BA;
+        background-color: var(--widgit-bg);
         border-radius: 8px;
         width: 450px;
         height: 500px;
         display: inline;
         justify-content: center;
         align-items: center;  
-        color: white;
+        color: var(--LMIcons);
         margin-left: 25px;
         padding-bottom: 50px;
         overflow: auto;
@@ -97,12 +114,12 @@ h3 {
 }
 
 .addbutton {
-    background-color: #364958;
+    background-color: var(--buttons);
     font-family: 'Fredoka', sans-serif;
     padding: 5px;
     border-radius: 500px;
     color: #D9D9D9;
-    border-color: #364958;
+    border-color: var(--buttons);
     border: none;
     margin-right: 25px;
     size: 100px;
@@ -110,6 +127,8 @@ h3 {
     height: 50px;
     font-size: 15px;
     margin-top: 10px;
+    text-align: center;
+
 
 }
 
@@ -145,12 +164,12 @@ h3 {
 }
 
 .completebutton {
-    background-color: #364958;
+    background-color: var(--buttons);
     font-family: 'Fredoka', sans-serif;
     padding: 5px;
     border-radius: 500px;
     color: #D9D9D9  !important;
-    border-color: #364958;
+    border-color: var(--buttons);
     border: none;
     margin-right: 25px;
     size: 100px;
@@ -163,7 +182,7 @@ h3 {
 
 .notesbg {
     margin-top: 25px;
-    background-color: #364958BA;
+    background-color: var(--widgit-bg);
     border-radius: 8px;
     width: 450px;
     height: auto;
@@ -171,7 +190,7 @@ h3 {
     flex-direction: column;
     justify-content: center;
     align-items: center;  
-    color: white;
+    color: var(--LMIcons);
     padding: 20px;
     overflow: auto;
     resize: both;
@@ -184,9 +203,9 @@ h3 {
 
 .notesmodule {
     margin-top: 50px;
-    background-color: #3649585E;
+    background-color: var(--widgitBG2);
     border-radius: 8px;
-    color: white;
+    color: var(--LMIcons);
     margin-left: 25px;
     padding-bottom: 50px;
     overflow: auto;
@@ -240,7 +259,7 @@ h3 {
 
 .dayviewbg {
     margin-top: 25px;
-    background-color: #364958BA;
+    background-color: var(--widgit-bg);
     border-radius: 8px;
     width: 450px;
     height: auto;
@@ -248,7 +267,7 @@ h3 {
     flex-direction: column;
     justify-content: center;
     align-items: center;  
-    color: white;
+    color: var(--LMIcons);
     padding: 20px;
     overflow: auto;
     resize: both;
@@ -274,9 +293,9 @@ h3 {
 
 .dayviewmodule {
     margin-top: 50px;
-    background-color: #3649585E;
+    background-color: var(--widgitBG2);
     border-radius: 8px;
-    color: white;
+    color: var(--LMIcons);
     margin-left: 25px;
     padding-bottom: 50px;
     overflow: auto;
@@ -290,3 +309,173 @@ h3 {
 
  
 }
+
+.sideoptionsmenu {
+    position: fixed !important;
+    bottom: 0 !important;
+    right: 0 !important;
+    background-color: var(--widgit-bg);
+    border-radius: 8px;
+    width: 300px;
+    height: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;  
+    color: var(--LMIcons);
+    padding: 20px;
+    overflow: none;
+    resize: none;
+    height: 5%;
+    max-height: 30%;
+    min-height: 10px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    align-items: flex-start;
+}
+
+.lowermenuicons {
+    margin-top: 0px;
+    margin-right: 30px;
+    color: var(--LMIcons);
+}
+
+.bodyContent {
+padding: 35px;
+background: #3649588e;
+border-radius: 15px;
+backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
+border: 1px solid #364958;
+width: 100%;
+max-width: 60%;
+height: auto;
+margin: 0 auto;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+
+
+}
+
+.widgits{
+width: 100%;
+display: flex;
+justify-content: space-around;
+flex-wrap: wrap;
+}
+
+.goalsbg {
+    margin-top: 25px;
+    background-color: var(--widgit-bg);
+    border-radius: 8px;
+    width: 450px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;  
+    color: var(--LMIcons);
+    padding: 20px;
+    overflow: auto;
+    resize: both;
+    min-width: 450px;
+    max-height: 95%;
+    margin-left: 25px;
+    align-items: flex-start;
+    min-height: 200px;
+}
+
+.goalsText {
+    font-family: 'Fredoka', sans-serif;
+    color: hsl(206, 24%, 28%);
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    padding-top: 05x;
+    margin-top: 0px;
+    font-size: 35px;
+    padding-left: 0px;
+    margin-right: 50px;
+    position: absolute !important; 
+}
+
+
+.goalsmodule {
+    margin-top: 50px;
+    background-color: var(--widgitBG2);
+    border-radius: 8px;
+    color: var(--LMIcons);
+    margin-left: 25px;
+    padding-bottom: 50px;
+    overflow: auto;
+    width: 95%;
+    height: 95%;
+    margin-right: 25px;
+    overflow: auto;
+    padding: 20px;
+    margin: 25px;
+    align-self: center !important;
+
+ 
+}
+
+
+
+.goalsobjectTitle {
+    font-family: 'Fredoka', sans-serif;
+    color: hsl(206, 24%, 28%);
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    padding-top: 05x;
+    margin-top: 0px;
+    font-size: 64px;
+    padding-left: 0px;
+    margin-right: 50px;
+    position: absolute !important; 
+}
+.breakScreen {
+    padding: 35px;
+    background: #3649588e;
+    border-radius: 15px;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid #364958;
+    width: 60%;
+    height: auto;
+    margin: 0;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    display: none;
+    }
+
+    .BreakContent{
+       display: none;
+       align-items: center;
+    }
+    .breakButton{
+        background-color: var(--widgit-bg);
+        border-radius: 8px;
+        width: 300px;
+        height: 10%;
+        color: var(--LMIcons);
+        padding: 20px;
+        overflow: none;
+        resize: none;
+        height: 5%;
+        max-height: 30%;
+        min-height: 10px;
+        margin-right: 30px;
+        margin-bottom: 20px;
+        border: none;
+        font-family: 'Fredoka', sans-serif;
+    }
+
+    .breakText{
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+        margin-top: 7px !important;
+        margin-bottom: 7px !important;
+    }
